--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>gatos curiosidades e mais</title>
 </head>
 <body>
-    
+<header>Gatos:curiosidades e mais 
+<img src="imagem 3.png">    
+</header>   
 </body>
 </html>
