--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
 <body>
 <header>Gatos:curiosidades e mais 
 <img src="imagem 3.png">    
-</header>   
+</header> 
+<h1>Alimentação</h1>  
+<li> Ração de qualidade: Ofereça ração adequada à idade, peso e saúde do seu gato. Existem rações específicas para filhotes, adultos e idosos.
+    Água fresca: Certifique-se de que o gato tenha sempre acesso a água limpa e fresca. Alguns gatos preferem fontes de água, que incentivam a hidratação.
+    Evite alimentos perigosos: Não dê chocolate, alho, cebola, uvas ou outros alimentos tóxicos para gatos</li>
+    <h2>Higiene</h2>
+    <li> Caixa de areia limpa: Troque a areia regularmente e limpe a caixa de areia para garantir que o seu gato tenha um ambiente limpo e confortável.
+        Escovação: Gatos de pelo longo precisam de escovações diárias para evitar emaranhados. Os de pelo curto podem ser escovados uma vez por semana. Além disso, escovar os dentes do seu gato pode ajudar a prevenir problemas dentários.</li>
+        <h3>Comportamento e socialização</h3>
+        <li> Brinquedos e estímulos mentais: Gatos precisam de atividades físicas e mentais para evitar o tédio. Brinquedos interativos, arranhadores e prateleiras para escalar são ótimos para isso.
+            Carinho e interação: Mesmo sendo animais mais independentes, muitos gatos gostam de carinho. Passe tempo com ele e entenda sua personalidade e limites.
+            Ambiente seguro: Se for um gato de rua, é importante garantir que o ambiente em casa seja seguro e protegido. Se ele for um gato de interior, crie espaços elevados para ele explorar.</li>
+            <h4>Cuidados com a saúde</h4>
+            <li> Vacinas: Mantenha a carteira de vacinação do seu gato em dia. As vacinas são essenciais para prevenir doenças como a panleucopenia felina e a leucemia felina.
+                Vermifugação e antipulgas: Realize o controle de parasitas internos (vermes) e externos (pulgas e carrapatos) regularmente.
+                Visitas ao veterinário: Leve seu gato ao veterinário para check-ups anuais e para tratar qualquer problema de saúde.</li>
+                <h5>Cuidados com o pelo</h5>
+                <li> Tosa: Alguns gatos, especialmente de raças de pelo longo, necessitam de tosas periódicas. Se for o caso, procure um profissional para cuidar disso.</li>
+                <h6>Cuidaos com a peso</h6>
+                <li>Tosa: Alguns gatos, especialmente de raças de pelo longo, necessitam de tosas periódicas. Se for o caso, procure um profissional para cuidar disso.</li>
 </body>
 </html>
