--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <header>Gatos:curiosidades e mais 
-<img src="imagem 3.png">    
+<img id="galho" src="imagem 3.png">    
 </header> 
 <h1>Alimentação</h1>  
 <li> Ração de qualidade: Ofereça ração adequada à idade, peso e saúde do seu gato. Existem rações específicas para filhotes, adultos e idosos.
@@ -27,6 +27,8 @@
                 <h5>Cuidados com o pelo</h5>
                 <li> Tosa: Alguns gatos, especialmente de raças de pelo longo, necessitam de tosas periódicas. Se for o caso, procure um profissional para cuidar disso.</li>
                 <h6>Cuidaos com a peso</h6>
-                <li>Tosa: Alguns gatos, especialmente de raças de pelo longo, necessitam de tosas periódicas. Se for o caso, procure um profissional para cuidar disso.</li>
+                <li>Tosa: Alguns gatos, especialmente de raças de pelo longo, necessitam de tosas periódicas. Se for o caso, procure um profissional para cuidar disso.</li> 
+    <img id="patas" src="imagem4.png">
+    <img id="gato" src="imagem1.png">
 </body>
 </html>
