--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header>Gatos:curiosidades e mais 
-<img id="galho" src="imagem 3.png">    
+<img id="galho" src="image 3.png">    
 </header> 
 <h1>Alimentação</h1>  
 <li> Ração de qualidade: Ofereça ração adequada à idade, peso e saúde do seu gato. Existem rações específicas para filhotes, adultos e idosos.
