--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li> Tosa: Alguns gatos, especialmente de raças de pelo longo, necessitam de tosas periódicas. Se for o caso, procure um profissional para cuidar disso.</li>
                 <h1>Cuidaos com a peso</h1>
                 <li>Tosa: Alguns gatos, especialmente de raças de pelo longo, necessitam de tosas periódicas. Se for o caso, procure um profissional para cuidar disso.</li> 
-    <img id="patas" src="imagem4.png">
-    <img id="gato" src="imagem1.png">
+    <img id="patas" src="image 4.png">
+    <img id="gato" src="image 1.png">
 </body>
 </html>
